# pyberny

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: doc.yaml  lint.yaml  pre-commit.yaml  tests.yaml
doc/: conf.py
src/berny/: species_data.py
tests/: test_optimize.py
