[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.12.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyberny"
version = "0.0.0"
description = "Molecular/crystal structure optimizer"
readme = "README.md"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
repository = "https://github.com/jhrmnn/pyberny"
documentation = "https://jhrmnn.github.io/pyberny"
license = "MPL-2.0"
packages = [
    { include = "berny", from = "src" },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
pytest = { version = "^3.6", optional = true }
coverage = { version = "^4.5", optional = true }
sphinx = { version = "^2.2", optional = true }
sphinxcontrib-katex = { version = "^0.5.1", optional = true }
toml = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
test = ["pytest", "coverage"]
doc = ["sphinx", "sphinxcontrib-katex", "toml"]

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
flake8-bugbear = { version = "==25.11.29", python = "^3.6" }
flake8-comprehensions = "==3.17.0"
flake8-quotes = "2.1.2"
black = { version = "==26.5.0", python = "^3.6" }
pep8-naming = "==0.15.1"
isort = { version = "5.13.2", python = "^3.6" }
pydocstyle = "==6.3.0"

[tool.poetry.scripts]
berny = "berny.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.black]
target-version = ["py36"]
skip-string-normalization = true
