[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyberny"
version = "0.7.0"
description = "Molecular/crystal structure optimizer"
readme = "README.md"
authors = [
    {name = "Jan Hermann", email = "dev@jan.hermann.name"}
]
license = "MPL-2.0"
requires-python = ">=3.7"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
]

[project.urls]
repository = "https://github.com/jhrmnn/pyberny"
documentation = "https://jhrmnn.github.io/pyberny"

[tool.hatch.build.targets.wheel]
packages = ["src/berny"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]
doc = [
    "sphinx (>=9.1,<9.2)",
    "jinja2 (>=3.0,<3.1)",
    "sphinxcontrib-katex (>=0.5.1,<0.6.0)",
    "toml (>=0.10.0,<0.11.0)",
]

[project.scripts]
berny = "berny.cli:main"

[tool.black]
skip-string-normalization = true
